<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeFragment"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/hiText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/amiko"
        android:text="Hi, Jasmine 👋"
        android:textColor="@color/text_1"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="44dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="72dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/homeCard1"
                android:layout_width="287dp"
                android:layout_height="105dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/background_1"
                app:cardCornerRadius="22dp"
                app:cardElevation="6dp">

                <TextView
                    android:id="@+id/homeCardTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/amiko"
                    android:text="Coronavirus"
                    android:textColor="@color/text_6"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/homeCardText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="55dp"
                    android:fontFamily="@font/amiko"
                    android:maxWidth="150dp"
                    android:minLines="2"
                    android:text="Type, infection, feature..."
                    android:textColor="@color/text_5"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/homeCardImage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/amico_1" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/homeCard2"
                android:layout_width="287dp"
                android:layout_height="105dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/background_1"
                app:cardCornerRadius="22dp"
                app:cardElevation="6dp">

                <TextView
                    android:id="@+id/homeCardTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/amiko"
                    android:text="How to prevent?"
                    android:textColor="@color/text_6"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/homeCardText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="55dp"
                    android:fontFamily="@font/amiko"
                    android:maxWidth="150dp"
                    android:minLines="2"
                    android:text="Wash hands, open windows, ..."
                    android:textColor="@color/text_5"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/homeCardImage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/amico_3" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/homeCard3"
                android:layout_width="287dp"
                android:layout_height="105dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/background_1"
                app:cardCornerRadius="22dp"
                app:cardElevation="6dp">

                <TextView
                    android:id="@+id/homeCardTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/amiko"
                    android:text="How to treat?"
                    android:textColor="@color/text_6"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/homeCardText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="55dp"
                    android:fontFamily="@font/amiko"
                    android:maxWidth="150dp"
                    android:minLines="2"
                    android:text="WVaccine, breathing machine, ..."
                    android:textColor="@color/text_5"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/homeCardImage3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/amico_4" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/reminderHomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="280dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="2dp"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="15dp"
        app:contentPaddingTop="10dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="6dp"
            android:src="@mipmap/reminder" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/amiko"
            android:text="@string/reminder"
            android:textColor="@color/text_1"
            android:textSize="12sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/faqHomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="280dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="2dp"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="18dp"
        app:contentPaddingRight="18dp"
        app:contentPaddingTop="10dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="4dp"
            android:src="@mipmap/qaa" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/amiko"
            android:text="@string/faq"
            android:textColor="@color/text_1"
            android:textSize="12sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/historyHomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="280dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="2dp"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="20dp"
        app:contentPaddingRight="20dp"
        app:contentPaddingTop="10dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/history" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/amiko"
            android:text="@string/history"
            android:textColor="@color/text_1"
            android:textSize="12sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/scannerHomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="390dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="2dp"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="19dp"
        app:contentPaddingTop="10dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="6dp"
            android:src="@mipmap/scanner_2" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/amiko"
            android:text="@string/scanner"
            android:textColor="@color/text_1"
            android:textSize="12sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/statisticHomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="390dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="2dp"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="15dp"
        app:contentPaddingTop="10dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="4dp"
            android:src="@mipmap/map" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/amiko"
            android:text="@string/hotspots"
            android:textColor="@color/text_1"
            android:textSize="12sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="390dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="2dp"
        app:contentPaddingBottom="20dp"
        app:contentPaddingLeft="20dp"
        app:contentPaddingRight="20dp"
        app:contentPaddingTop="20dp">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/dotdotdot" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/statistics"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="530dp"
        android:backgroundTint="@color/background_3"
        android:outlineAmbientShadowColor="@color/background_4"
        android:outlineSpotShadowColor="@color/background_2"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        app:contentPaddingLeft="25dp"
        app:contentPaddingRight="25dp"
        app:contentPaddingTop="10dp">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Location - United Kingdom"
            android:textAllCaps="false"
            android:textColor="@color/text_5" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="Cases"
            android:textColor="@color/text_6"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="45dp"
            android:text="Deaths"
            android:textColor="@color/text_6"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/casesHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="11891292"
            android:textColor="@color/text_4"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/deathsHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="75dp"
            android:text="147857"
            android:textColor="@color/text_4"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/casesHomeIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="82dp"
            android:src="@mipmap/shangsheng" />

        <ImageView
            android:id="@+id/deathsHomeIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="82dp"
            android:src="@mipmap/shangsheng" />

        <View
            android:id="@+id/divider"
            android:layout_width="40dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/background_1"
            android:visibility="invisible" />

    </androidx.cardview.widget.CardView>

</FrameLayout>